@@ -8,6 +8,9 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
   2023-09-15, that occurred on some systems when running an external command
   with a redirection from a command substitution.
 
+- Fixed an init-time crash on failure to trim the shell command history file
+  due to a non-writable parent directory; ksh now prints a warning instead.
+
 2023-12-25:
 
 - Fixed a regression in the behavior of 'exit' in a trap action, introduced
